// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it renders Button 1`] = `
<button
  className="mfui-button mfui-button_size-all_medium mfui-button_passive-color_green mfui-button_hover-color_green mfui-button_down-color_dark mfui-button_disabled-color_gray mfui-button_padding mfui-button_width_auto"
  type="button"
>
  <div
    className="mfui-button__inner"
  />
</button>
`;

exports[`<Button /> it renders children 1`] = `
<button
  className="mfui-button mfui-button_size-all_medium mfui-button_passive-color_green mfui-button_hover-color_green mfui-button_down-color_dark mfui-button_disabled-color_gray mfui-button_padding mfui-button_width_auto"
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <div
      className="mfui-button__content"
    >
      button
    </div>
  </div>
</button>
`;

exports[`<Button /> it renders spinner 1`] = `
<Button
  disabledColor="gray"
  downColor="dark"
  hoverColor="green"
  padding={true}
  passiveColor="green"
  showSpinner={true}
  sizeAll="medium"
  type="button"
  width="auto"
>
  <button
    className="mfui-button mfui-button_size-all_medium mfui-button_passive-color_green mfui-button_hover-color_green mfui-button_down-color_dark mfui-button_disabled-color_gray mfui-button_padding mfui-button_width_auto mfui-button_loading"
    type="button"
  >
    <div
      className="mfui-button__inner"
    >
      <div
        className="mfui-button__spinner"
      >
        <test-file-stub />
      </div>
    </div>
  </button>
</Button>
`;

exports[`<Button /> it renders tag a 1`] = `
<Button
  disabledColor="gray"
  downColor="dark"
  hoverColor="green"
  href="http://moscow.megafon.ru/"
  padding={true}
  passiveColor="green"
  showSpinner={false}
  sizeAll="medium"
  type="button"
  width="auto"
>
  <a
    className="mfui-button mfui-button_size-all_medium mfui-button_passive-color_green mfui-button_hover-color_green mfui-button_down-color_dark mfui-button_disabled-color_gray mfui-button_padding mfui-button_width_auto"
    href="http://moscow.megafon.ru/"
    type=""
  >
    <div
      className="mfui-button__inner"
    />
  </a>
</Button>
`;
